--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>se.alipsa</groupId>
+            <artifactId>fx-yearmonth-picker</artifactId>
+        <version>1.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>13</version>
